# blatt-7-aufgabe-1-noteam

./: .travis.yml  CMakeLists.txt  README.md
avlTree/: avlTree.cpp  avlTree.h
test/: CMakeLists.txt  testList.cpp  testList.h
